# minbpe

./: README.md  pyproject.toml
src/minbpe/: __init__.py  basic.py  gpt4.py  regex.py
tests/: test_tokenizer.py
